@@ -1628,6 +1628,7 @@ up_confirm (package_info *pi, void *data, bool changed)
 
   ask_yes_no_with_details (_("ai_ti_confirm_uninstall"), text->str,
 			   c->pi, remove_details,
+			   "uninstallview",
 			   up_checkrm_start, c);
   g_string_free (text, 1);
 }
@@ -1959,8 +1960,8 @@ if_details_reply (int cmd, apt_proto_decoder *dec, void *data)
   ask_yes_no_with_details ((pi->installed_version
 			    ? _("ai_ti_confirm_update")
 			    : _("ai_ti_confirm_install")),
-			   text->str,
-			   pi, install_details, cont, c);
+			   text->str, pi, install_details,
+			   NULL, cont, c);
 
   g_string_free (text, 1);
 }
