@@ -42,6 +42,7 @@
 #include <conic.h>
 #include <libgnomevfs/gnome-vfs.h>
 
+#include "main.h"
 #include "util.h"
 #include "details.h"
 #include "log.h"
@@ -388,6 +389,7 @@ void
 ask_yes_no_with_details (const gchar *title,
 			 const gchar *question,
 			 package_info *pi, detail_kind kind,
+			 const char *help_topic,
 			 void (*cont) (bool res, void *data),
 			 void *data)
 {
@@ -413,6 +415,16 @@ ask_yes_no_with_details (const gchar *title,
   gtk_dialog_set_has_separator (GTK_DIALOG (dialog), FALSE);
   gtk_container_add (GTK_CONTAINER (GTK_DIALOG (dialog)->vbox),
 		     gtk_label_new (question));
+
+  if (help_topic != NULL)
+    {
+      char *full_help_topic =
+	g_strconcat ("Utilities_ApplicationInstaller_", help_topic);
+
+      set_dialog_help (dialog, full_help_topic);
+
+      g_free (full_help_topic);
+    }
 
   g_signal_connect (dialog, "response",
 		    G_CALLBACK (yes_no_response), c);
